--- a/templates/journaux/index.html.twig
+++ b/templates/journaux/index.html.twig
@@ -4,7 +4,18 @@
 
 {% block body %}
     <main class="journal journaux">
-        <h1 class="p-3">Les journaux en ligne</h1>
+        <div class="row">
+            <div class="col-6">
+                <h1 class="p-3">Les journaux en ligne</h1>
+            </div>
+            <div class="col-6 mt-4 text-right">
+                <span class="journal-stat text-center m-2 mr-5 text-dark">
+                    <span class="red-number">
+                        {{ totalarticles }}
+                    </span> pages au total
+                </span>
+            </div>
+        </div>
         <div class="bureau">
             {% for journaux in journauxes %}
                 <a href="{{ path('journaux_show', {id: journaux.id}) }}" title="{{ journaux.titre }}">
