Mise à jour des nouveautés

--- a/templates/last.html.twig
+++ b/templates/last.html.twig
@@ -56,6 +56,9 @@
                 <h2>Dernières nouveautés</h2>
                 <ul>
                     <li>
+                        09/05/2021 : affichage du nombre de pages sur chaque journal.
+                    </li>
+                    <li>
                         21/02/2021 : il n'est plus possible d'ajouter des PDF à une page du journal, les photos étant plus visuelles.
                     </li>
                     <li>
