Change title on au jour le jour

--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Articles index{% endblock %}
+{% block title %}Au jour le jour{% endblock %}
 
 {% block body %}
 <main class="journal">
